--- a/src/main/resources/templates/api.vm
+++ b/src/main/resources/templates/api.vm
@@ -26,17 +26,15 @@
                 <ul class="returns_list">
 					#foreach( $return in $returns )
                         <li>
-							$return.name : $return.tp , $return.isArray
                             <span>
-								$return.describe
+								$return.text
                             </span>
-                            <span> $return.example</span>
                         </li>
 					#end
 
                 </ul>
             </div>
         </li>
-    </div>
 	#end
+</div>
 #end
