use api's fullpath as div id

--- a/src/main/resources/templates/api.vm
+++ b/src/main/resources/templates/api.vm
@@ -1,5 +1,5 @@
 #foreach( $api in $apis)
-    <div id="${api.name}">
+    <div id="${api.fullPath}">
             <h3>${api.name}</h3>
 
             <h4>Full path</h4>
